third_party/move/move-compiler-v2/tests/more-v1/parser/spec_parsing_emits_fail.exp

Diagnostics:
error: unexpected token
  ┌─ tests/more-v1/parser/spec_parsing_emits_fail.move:3:19
  │
3 │         emits _msg;
  │                   ^
  │                   │
  │                   Unexpected ';'
  │                   Expected 'to'
